Fix rounding/spacing issues in address component.

--- a/packages/components/src/components/ui/sc-compact-address/sc-compact-address.scss
+++ b/packages/components/src/components/ui/sc-compact-address/sc-compact-address.scss
@@ -38,10 +38,10 @@ sc-address {
     > * {
       flex: 1;
       width: 50%;
-      margin-right: -1px;
+      margin-left: -1px;
 
-      &:last-child {
-        margin-right: 0;
+      &:first-child {
+        margin-left: 0;
       }
     }
   }
